Add assertion workflow steps
